# scripts-pipelines-and-tiny-tools

./: .editorconfig  .gitignore  .mega-linter.yml  LICENSE  README.md  pyproject.toml
api/: README.md
backup/: README.md
backup_lxc_and_filesystem_path/: README.md  backup_container.sh  backup_path_tar_gpg.sh  empty_password.txt  error_notification.sh
bareos-scripts/: clean_expired_baros_volumes.sh  clean_missing_volumes.sh  purge_all_volumes_from_pool.sh  readme.md  remove_purged_volumes.sh
bareos_pool_operations/: batch_process_bareos_volumes.sh  clean_expired_baros_volumes.sh  clean_missing_volumes.sh  delete_all_volumes_from_pool_mysql.sh  delete_all_volumes_from_pool_pgsql.sh  delete_range_of_volumes.sh  prune_all_volumes_from_pool_mysql.sh  prune_all_volumes_from_pool_pgsql.sh  purge_all_volumes_from_pool_mysql.sh  purge_all_volumes_from_pool_pgsql.sh  remove_purged_volumes.sh
bareos_scripts/: batch_process_bareos_volumes.sh  clean_expired_baros_volumes.sh  delete_range_of_volumes.sh  prune_all_volumes_from_pool_pgsql.sh  purge_all_volumes_from_pool_pgsql.sh
benchmark/: README.md
calculate_and_check_md5/: README.md  calculate_md5.sh  check_error_notifications.sh  check_md5.sh
cli/: README.md
network/: README.md
network/ixnetwork_related_scripts/: README.md  clean_ixnetwork_logs_and_stats.bat  ixnetwork_server_at_7999_10999.bat  ixnetwork_server_at_7999_10999_default_user.bat  ixnetwork_server_rdp_start_jenkins_pipeline.groovy  pyproject.toml  traffic_item_statistics.py
network/ixnetwork_related_scripts/stats_example/: Traffic Item Statistics.csv
(+85 files in other folders)
