[tool.poetry]
name = "inxnetwork_related_scripts"
version = "0.0.0"
description = "Just to resolve linter dependencies"
readme = "README.md"
license = "BSD 3-Clause License"
authors = ["Aleksandr Bazhenov <bazhenoff.alexander@gmail.com>"]
repository = "https://github.com/alexanderbazhenoff"

[tool.poetry.dependencies]
pandas = "*"
plotly = "*"
